--- a/src/style.css
+++ b/src/style.css
@@ -33,8 +33,10 @@ body {
     border-top-style: hidden;
     border-right-style: hidden;
     border-left-style: hidden;
+    border-color: #f5f5f5;
     box-shadow: none;
     color: #f5f5f5;
+    font-size: 20px;
 }
 
 ::placeholder {
@@ -44,4 +46,12 @@ body {
 #inputVal:focus {
     outline: none;
     background-color: transparent;
+}
+
+#submit-location {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    color: #f5f5f5;
 }
