--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 #weather {
-    margin: 40px;
+    margin: 40px 40px 10px 40px;
     color: #f5f5f5;
 }
 
@@ -25,7 +25,7 @@ body {
 }
 
 #locationInput {
-    margin: 40px;
+    margin: 10px 40px 40px 40px;
 }
 
 #inputVal {
